# paradox-script-mcp

./: .gitignore  .mcp.json  Makefile  README.ja.md  README.md  pyproject.toml
src/paradox_script_mcp/: __init__.py  server.py
src/paradox_script_mcp/core/: __init__.py  game.py
src/paradox_script_mcp/knowledge/: __init__.py  directory_map.py
src/paradox_script_mcp/knowledge/hoi4/: directories.yml
src/paradox_script_mcp/tools/: __init__.py  explore.py  structure.py  symbols.py
